<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">BookReviewApp</string>

    <string name="book_title">Book Name</string>
    <string name="book_author">Author</string>
    <string name="book_year">Year</string>
    <string name="recommended_books">Recommended Books</string>
    <string name="sample_book_title">Sample Book Title</string>
    <string name="sample_book_author">by Author Name</string>
    <string name="Reviews">Reviews</string>
    <string name="book_cover">Book cover</string>
    <string name="book_summary">Book summary</string>
    <string name="rate_this">Rate this book:</string>
    <string name="book_rating">Rating</string>
    <string name="search_hint">Search for a book or author...</string>
    <string name="no_search_results">No matching results found</string>
    <string name="search_results_title">Results for: &quot;%1$s&quot;</string>
    <string name="add_to_favorites">Add to your favorites:</string>
    <string name="add_review">Add review</string>
    <string name="you_rated">Rate:</string>
    <string name="you_rated_with_value">Rate: %.1f out of 5</string>
    <string name="favorites_button_text">Favorites</string>
    <string name="subject_books_title">Books by Subject</string>
    <string name="browse_by_subject">Browse by Subject</string>
    <string name="write_here">Write your review here</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="review_saved">Review saved!</string>
    <string name="review_deleted">Review deleted</string>
    <string name="empty_review">You can not submit an empty review!</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_favs">My Favorite books</string>


    <string name="subject_fantasy">Fantasy</string>
    <string name="subject_romance">Romance</string>
    <string name="subject_history">History</string>
    <string name="subject_mystery">Mystery</string>
    <string name="subject_horror">Horror</string>



</resources>
