<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_here"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/save"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</LinearLayout>