<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.BookDetailsFragment"
    android:background="#E6F2FA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="220dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/bookImageCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/book_cover"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/booktitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/book_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/bookSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/book_summary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/addToFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textSize="16sp"
                android:text="@string/add_to_favorites" />

            <ImageView
                android:id="@+id/favoriteIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/white_heart_favorite" />
        </LinearLayout>

        <TextView
            android:id="@+id/youRated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:text="@string/you_rated"
            android:layout_gravity="center_horizontal" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="0.5"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <Button
            android:id="@+id/buttonAddReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_review" />

    </LinearLayout>
</ScrollView>
