<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/favoritesButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="8dp"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/red_heart_favorite" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:queryHint="@string/search_hint"
            app:iconifiedByDefault="false"
            android:background="@drawable/search_border"
            android:padding="0dp"/>

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommended_books"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <Button
            android:id="@+id/btn_browse_by_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_by_subject"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"/>
    </LinearLayout>
</ScrollView>
